--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,4 @@
-﻿\
-# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
+﻿# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
 # SPDX-License-Identifier: MIT
 # requirements-dev.txt
 pytest>=8.0.0
@@ -12,3 +11,4 @@ hypothesis>=6.0.0
 argon2-cffi>=23.1.0
 cryptography>=42.0.0
 click>=8.1.0
+filelock>=3.13.0
