--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,54 +1,228 @@
-name: CI — lint/pytest/coverage
+---
+name: CI (Paranoid Stage 0)
 
-on:
+'on':
   push:
-    branches: [ main ]
+    branches:
+      - main
+    tags:
+      - 'v*.*.*'
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+
+env:
+  PYTHON_VERSION: '3.13'
 
 jobs:
-  lint-format:
+  lint_and_test:
+    name: Lint & Test & Coverage
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
-      - name: Install tooling
-        run: pip install black ruff isort
-      - name: Black (check-only)
-        run: black --check src tests
-      - name: Ruff (check-only)
-        run: ruff check src tests
-      - name: isort (check-only)
-        run: isort --check-only src tests
+          python-version: ${{ env.PYTHON_VERSION }}
 
-  pytest-coverage:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ '3.10', '3.11', '3.12', '3.13' ]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - name: Cache pip
+        uses: actions/cache@v3
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+          path: ~/.cache/pip
+          key: >
+            ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys:
+            - ${{ runner.os }}-pip-
+
+      - name: Install dependencies (dev)
         run: |
-          pip install -r requirements-dev.txt
-          pip install .
+          python -m pip install --upgrade pip setuptools wheel
+          if [ -f requirements-dev.txt ]; then
+            pip install -r requirements-dev.txt
+          else
+            pip install ruff black isort mypy pytest coverage \
+              syft grype semgrep cosign
+          fi
+
+      - name: Run pre-commit hooks
+        run: pre-commit run --all-files
+
+      - name: Run ruff (lint)
+        run: ruff check .
+
+      - name: Run black (format check)
+        run: black --check .
+
+      - name: Run isort (import order)
+        run: isort --check-only .
+
+      - name: Run mypy (type check)
+        run: mypy src
+
       - name: Run pytest with coverage
         run: |
-          pytest
-      - name: Upload coverage XML
-        uses: actions/upload-artifact@v4
+          pytest --maxfail=1 --disable-warnings -q --cov=src
+          coverage xml -o coverage.xml
+          coverage html -d htmlcov
+
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v3
         with:
-          name: coverage-xml-${{ matrix.python-version }}
-          path: coverage.xml
-      - name: Upload coverage HTML (optional)
-        uses: actions/upload-artifact@v4
+          name: coverage-reports
+          path: |
+            coverage.xml
+            htmlcov/
+
+  sbom_scan:
+    name: SBOM → Grype / Trivy
+    needs:
+      - lint_and_test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          name: htmlcov-${{ matrix.python-version }}
-          path: htmlcov
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install SBOM tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install syft grype trivy
+
+      - name: Generate SBOM (CycloneDX JSON)
+        run: syft . -o cyclonedx-json=sbom.json
+
+      - name: Scan SBOM with Grype
+        run: grype sbom:sbom.json --fail-on medium
+
+      - name: Scan filesystem with Trivy
+        run: |
+          trivy sbom \
+            --format cyclonedx \
+            --output sbom-cdx.json .
+          trivy fs \
+            --severity HIGH,CRITICAL \
+            --exit-code 1 .
+
+      - name: Upload SBOM
+        uses: actions/upload-artifact@v3
+        with:
+          name: sbom-json
+          path: sbom.json
+
+  semgrep_scan:
+    name: Semgrep Static Analysis
+    needs:
+      - sbom_scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Semgrep
+        run: pip install semgrep
+
+      - name: Run Semgrep (OSS rules)
+        uses: returntocorp/semgrep-action@v2
+        with:
+          config: 'p/ci'
+
+  codeql-analysis:
+    name: CodeQL Analysis
+    needs:
+      - semgrep_scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: python
+
+      - name: Autobuild (необязательно для Python)
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Run CodeQL queries
+        uses: github/codeql-action/analyze@v3
+
+  sign_and_release:
+    name: Sign Artifacts & Publish Release
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs:
+      - codeql-analysis
+    runs-on: ubuntu-latest
+    env:
+      COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
+      VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+      VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip setuptools wheel build
+          pip install cosign
+
+      - name: Fetch Cosign key from Vault
+        if: ${{ env.VAULT_ADDR && env.VAULT_TOKEN }}
+        uses: hashicorp/vault-action@v2
+        id: vault
+        with:
+          url: ${{ env.VAULT_ADDR }}
+          method: token
+          token: ${{ env.VAULT_TOKEN }}
+          path: secret/data/cosign
+
+      - name: Write Cosign Private Key
+        if: steps.vault.outputs['secret/data/cosign']
+        run: |
+          echo "${{ steps.vault.outputs['secret/data/cosign'] }}" \
+            | base64 --decode > cosign.key
+          chmod 600 cosign.key
+
+      - name: Build Python packages
+        run: python -m build
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+          body: |
+            Автоматический релиз по тегу ${{ github.ref_name }}.
+            – ✅ Все линты, типизация, тесты пройдены
+            – ✅ SBOM + Grype/Trivy: нет рисков ≥ medium
+            – ✅ Semgrep, CodeQL
+            – 📑 Подпись артефактов через Cosign
+
+      - name: Sign artifacts with Cosign
+        run: |
+          cosign sign --key cosign.key \
+            dist/*.tar.gz dist/*.whl
+
+      - name: Upload signed artifacts to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          files: |
+            dist/*.tar.gz
+            dist/*.whl
+            cosign.pub
+
+      - name: Update badges in README.md
+        run: |
+          echo "✅ Релиз завершён. Проверь и обнови бейджи в README."
