--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 ---
 name: CI (Paranoid Stage 0)
 
-on:  # yamllint disable-line truthy
+on:
   push:
     branches:
       - main
@@ -15,59 +15,58 @@ env:
   PYTHON_VERSION: '3.13'
 
 jobs:
+  # ─── ШАГ 1: Lint → Type → Test → Coverage ──────────────────────────────────
   lint_and_test:
     name: Lint & Test & Coverage
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: ⚙️ Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Cache pip
+      - name: 🚧 Cache pip
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: >
-            ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
-          restore-keys:
-            - ${{ runner.os }}-pip-
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-      - name: Install dependencies (dev)
+      - name: 📦 Install dependencies (dev)
         run: |
           python -m pip install --upgrade pip setuptools wheel
           if [ -f requirements-dev.txt ]; then
             pip install -r requirements-dev.txt
           else
-            pip install ruff black isort mypy pytest coverage \
-              syft grype semgrep cosign
+            pip install ruff black isort mypy pytest coverage syft grype semgrep cosign
           fi
 
-      - name: Run pre-commit hooks
+      - name: 🔍 Run pre-commit hooks
         run: pre-commit run --all-files
 
-      - name: Run ruff (lint)
+      - name: 🔍 Run ruff (lint)
         run: ruff check .
 
-      - name: Run black (format check)
+      - name: 🔍 Run black (format check)
         run: black --check .
 
-      - name: Run isort (import order)
+      - name: 🔍 Run isort (import order)
         run: isort --check-only .
 
-      - name: Run mypy (type check)
+      - name: 🔍 Run mypy (type check)
         run: mypy src
 
-      - name: Run pytest with coverage
+      - name: 🧪 Run pytest with coverage
         run: |
           pytest --maxfail=1 --disable-warnings -q --cov=src
           coverage xml -o coverage.xml
           coverage html -d htmlcov
 
-      - name: Upload coverage reports
+      - name: 📁 Upload coverage reports
         uses: actions/upload-artifact@v3
         with:
           name: coverage-reports
@@ -75,108 +74,104 @@ jobs:
             coverage.xml
             htmlcov/
 
+  # ─── ШАГ 2: Генерация SBOM → Grype/Trivy scan ─────────────────────────────
   sbom_scan:
     name: SBOM → Grype / Trivy
-    needs:
-      - lint_and_test
+    needs: lint_and_test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: ⚙️ Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Install SBOM tools
+      - name: 📦 Install SBOM tools
         run: |
           python -m pip install --upgrade pip
           pip install syft grype trivy
 
-      - name: Generate SBOM (CycloneDX JSON)
+      - name: ⚙️ Generate SBOM (CycloneDX JSON)
         run: syft . -o cyclonedx-json=sbom.json
 
-      - name: Scan SBOM with Grype
+      - name: 🔎 Scan SBOM with Grype
         run: grype sbom:sbom.json --fail-on medium
 
-      - name: Scan filesystem with Trivy
+      - name: 🔎 Scan filesystem with Trivy
         run: |
-          trivy sbom \
-            --format cyclonedx \
-            --output sbom-cdx.json .
-          trivy fs \
-            --severity HIGH,CRITICAL \
-            --exit-code 1 .
+          trivy sbom --format cyclonedx --output sbom-cdx.json .
+          trivy fs --severity HIGH,CRITICAL --exit-code 1 .
 
-      - name: Upload SBOM
+      - name: 🏷 Upload SBOM
         uses: actions/upload-artifact@v3
         with:
           name: sbom-json
           path: sbom.json
 
+  # ─── ШАГ 3: Semgrep Static Analysis ───────────────────────────────────────
   semgrep_scan:
     name: Semgrep Static Analysis
-    needs:
-      - sbom_scan
+    needs: sbom_scan
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Semgrep
+      - name: 📦 Install Semgrep
         run: pip install semgrep
 
-      - name: Run Semgrep (OSS rules)
+      - name: 🔍 Run Semgrep (OSS rules)
         uses: returntocorp/semgrep-action@v2
         with:
           config: 'p/ci'
 
+  # ─── ШАГ 4: CodeQL Analysis ───────────────────────────────────────────────
   codeql-analysis:
     name: CodeQL Analysis
-    needs:
-      - semgrep_scan
+    needs: semgrep_scan
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Initialize CodeQL
+      - name: 📦 Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: python
 
-      - name: Autobuild (необязательно для Python)
+      - name: 🛠 Autobuild (необязательно для Python)
         uses: github/codeql-action/autobuild@v3
 
-      - name: Run CodeQL queries
+      - name: 🔍 Run CodeQL queries
         uses: github/codeql-action/analyze@v3
 
+  # ─── ШАГ 5: Sign & Release (только при теге v*) ──────────────────────────
   sign_and_release:
     name: Sign Artifacts & Publish Release
     if: startsWith(github.ref, 'refs/tags/v')
-    needs:
-      - codeql-analysis
+    needs: codeql-analysis
     runs-on: ubuntu-latest
     env:
       COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
       VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
       VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
     steps:
-      - name: Checkout repository
+      - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: ⚙️ Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Install build tools
+      - name: 📦 Install build tools
         run: |
           python -m pip install --upgrade pip setuptools wheel build
           pip install cosign
 
-      - name: Fetch Cosign key from Vault
+      - name: 🔐 (Optional) Fetch Cosign key from Vault
         if: ${{ env.VAULT_ADDR && env.VAULT_TOKEN }}
         uses: hashicorp/vault-action@v2
         id: vault
@@ -186,17 +181,16 @@ jobs:
           token: ${{ env.VAULT_TOKEN }}
           path: secret/data/cosign
 
-      - name: Write Cosign Private Key
+      - name: 📥 Write Cosign Private Key
         if: steps.vault.outputs['secret/data/cosign']
         run: |
-          echo "${{ steps.vault.outputs['secret/data/cosign'] }}" \
-            | base64 --decode > cosign.key
+          echo "${{ steps.vault.outputs['secret/data/cosign'] }}" | base64 --decode > cosign.key
           chmod 600 cosign.key
 
-      - name: Build Python packages
+      - name: 📦 Build Python packages
         run: python -m build
 
-      - name: Create GitHub Release
+      - name: 📝 Create GitHub Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
@@ -209,12 +203,11 @@ jobs:
             – ✅ Semgrep, CodeQL
             – 📑 Подпись артефактов через Cosign
 
-      - name: Sign artifacts with Cosign
+      - name: 🔏 Sign artifacts with Cosign
         run: |
-          cosign sign --key cosign.key \
-            dist/*.tar.gz dist/*.whl
+          cosign sign --key cosign.key dist/*.tar.gz dist/*.whl
 
-      - name: Upload signed artifacts to Release
+      - name: 🏷 Upload signed artifacts to Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
@@ -223,6 +216,6 @@ jobs:
             dist/*.whl
             cosign.pub
 
-      - name: Update badges in README.md
+      - name: ➡️ Update badges in README.md
         run: |
           echo "✅ Релиз завершён. Проверь и обнови бейджи в README."
