--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,8 @@ jobs:
           if [ -f requirements-dev.txt ]; then
             pip install -r requirements-dev.txt
           else
-            pip install ruff black isort mypy pytest coverage \
+            # Установим всё необходимое, включая pre-commit
+            pip install pre-commit ruff black isort mypy pytest coverage \
               syft grype semgrep cosign
           fi
 
