ci: исправил ci.yml для корректного вызова pre-commit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,15 +40,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel
           if [ -f requirements-dev.txt ]; then
-            pip install -r requirements-dev.txt
+            python -m pip install -r requirements-dev.txt
           else
-            # Установим всё, включая pre-commit
-            pip install pre-commit ruff black isort mypy pytest coverage \
+            python -m pip install \
+              pre-commit \
+              ruff black isort mypy pytest coverage \
               syft grype semgrep cosign
           fi
 
       - name: 🔍 Run pre-commit hooks
-        run: python -m pre_commit run --all-files
+        run: pre-commit run --all-files
 
       - name: 🔍 Run ruff (lint)
         run: ruff check .
@@ -93,7 +94,7 @@ jobs:
       - name: 📦 Install SBOM tools
         run: |
           python -m pip install --upgrade pip
-          pip install syft grype trivy
+          python -m pip install syft grype trivy
 
       - name: ⚙️ Generate SBOM (CycloneDX JSON)
         run: syft . -o cyclonedx-json=sbom.json
@@ -122,7 +123,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 📦 Install Semgrep
-        run: pip install semgrep
+        run: python -m pip install semgrep
 
       - name: 🔍 Run Semgrep (OSS rules)
         uses: returntocorp/semgrep-action@v2
@@ -171,7 +172,7 @@ jobs:
       - name: 📦 Install build tools
         run: |
           python -m pip install --upgrade pip setuptools wheel build
-          pip install cosign
+          python -m pip install cosign
 
       - name: 🔐 (Optional) Fetch Cosign key from Vault
         if: ${{ env.VAULT_ADDR && env.VAULT_TOKEN }}
