--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
   PYTHON_VERSION: '3.13'
 
 jobs:
-  # ─── ШАГ 1: Lint → Type → Test → Coverage ──────────────────────────────────
+  # ─── ШАГ 1: Lint → Type → Test → Coverage ────────────────────────────────
   lint_and_test:
     name: Lint & Test & Coverage
     runs-on: ubuntu-latest
@@ -23,7 +23,7 @@ jobs:
       - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set up Python ${{ env.PYTHON_VERSION }}
+      - name: ⚙️ Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -41,11 +41,10 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           if [ -f requirements-dev.txt ]; then
             python -m pip install -r requirements-dev.txt
+            # Дублируем на всякий случай pre-commit
+            python -m pip install pre-commit
           else
-            python -m pip install \
-              pre-commit \
-              ruff black isort mypy pytest coverage \
-              syft grype semgrep cosign
+            python -m pip install pre-commit ruff black isort mypy pytest coverage syft grype semgrep cosign
           fi
 
       - name: 🔍 Run pre-commit hooks
@@ -86,7 +85,7 @@ jobs:
       - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set up Python ${{ env.PYTHON_VERSION }}
+      - name: ⚙️ Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -113,7 +112,7 @@ jobs:
           name: sbom-json
           path: sbom.json
 
-  # ─── ШАГ 3: Semgrep Static Analysis ───────────────────────────────────────
+  # ─── ШАГ 3: Semgrep Static Analysis ──────────────────────────────────────
   semgrep_scan:
     name: Semgrep Static Analysis
     needs: sbom_scan
@@ -130,7 +129,7 @@ jobs:
         with:
           config: 'p/ci'
 
-  # ─── ШАГ 4: CodeQL Analysis ───────────────────────────────────────────────
+  # ─── ШАГ 4: CodeQL Analysis ──────────────────────────────────────────────
   codeql_analysis:
     name: CodeQL Analysis
     needs: semgrep_scan
@@ -150,7 +149,7 @@ jobs:
       - name: 🔍 Run CodeQL queries
         uses: github/codeql-action/analyze@v3
 
-  # ─── ШАГ 5: Sign & Release (только при теге v*) ──────────────────────────
+  # ─── ШАГ 5: Sign & Release (только при теге v*) ─────────────────────────
   sign_and_release:
     name: Sign Artifacts & Publish Release
     if: startsWith(github.ref, 'refs/tags/v')
@@ -164,7 +163,7 @@ jobs:
       - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set up Python ${{ env.PYTHON_VERSION }}
+      - name: ⚙️ Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -208,8 +207,7 @@ jobs:
             – 📑 Подпись артефактов через Cosign
 
       - name: 🔏 Sign artifacts with Cosign
-        run: |
-          cosign sign --key cosign.key dist/*.tar.gz dist/*.whl
+        run: cosign sign --key cosign.key dist/*.tar.gz dist/*.whl
 
       - name: 🏷 Upload signed artifacts to Release
         uses: softprops/action-gh-release@v1
