--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,19 +3,15 @@ name: CI (Paranoid Stage 0)
 
 on:  # yamllint disable-line truthy
   push:
-    branches:
-      - main
-    tags:
-      - 'v*.*.*'
+    branches: [main]
+    tags: ['v*.*.*']
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 env:
   PYTHON_VERSION: '3.13'
 
 jobs:
-  # ─── ШАГ 1: Lint → Type → Test → Coverage ────────────────────────────────
   lint_and_test:
     name: Lint & Test & Coverage
     runs-on: ubuntu-latest
@@ -23,7 +19,7 @@ jobs:
       - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set up Python
+      - name: ⚙️ Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -36,16 +32,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: 📦 Install dependencies (dev)
+      - name: 📦 Install dev dependencies (unified)
         run: |
           python -m pip install --upgrade pip setuptools wheel
           if [ -f requirements-dev.txt ]; then
             python -m pip install -r requirements-dev.txt
-            # Дублируем на всякий случай pre-commit
-            python -m pip install pre-commit
-          else
-            python -m pip install pre-commit ruff black isort mypy pytest coverage syft grype semgrep cosign
           fi
+          python -m pip install pre-commit ruff black isort mypy pytest coverage syft grype semgrep cosign
 
       - name: 🔍 Run pre-commit hooks
         run: pre-commit run --all-files
@@ -76,7 +69,6 @@ jobs:
             coverage.xml
             htmlcov/
 
-  # ─── ШАГ 2: Генерация SBOM → Grype/Trivy scan ─────────────────────────────
   sbom_scan:
     name: SBOM → Grype / Trivy
     needs: lint_and_test
@@ -85,7 +77,7 @@ jobs:
       - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set up Python
+      - name: ⚙️ Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -112,7 +104,6 @@ jobs:
           name: sbom-json
           path: sbom.json
 
-  # ─── ШАГ 3: Semgrep Static Analysis ──────────────────────────────────────
   semgrep_scan:
     name: Semgrep Static Analysis
     needs: sbom_scan
@@ -129,7 +120,6 @@ jobs:
         with:
           config: 'p/ci'
 
-  # ─── ШАГ 4: CodeQL Analysis ──────────────────────────────────────────────
   codeql_analysis:
     name: CodeQL Analysis
     needs: semgrep_scan
@@ -149,7 +139,6 @@ jobs:
       - name: 🔍 Run CodeQL queries
         uses: github/codeql-action/analyze@v3
 
-  # ─── ШАГ 5: Sign & Release (только при теге v*) ─────────────────────────
   sign_and_release:
     name: Sign Artifacts & Publish Release
     if: startsWith(github.ref, 'refs/tags/v')
@@ -163,7 +152,7 @@ jobs:
       - name: 🛎 Checkout repository
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set up Python
+      - name: ⚙️ Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -207,7 +196,8 @@ jobs:
             – 📑 Подпись артефактов через Cosign
 
       - name: 🔏 Sign artifacts with Cosign
-        run: cosign sign --key cosign.key dist/*.tar.gz dist/*.whl
+        run: |
+          cosign sign --key cosign.key dist/*.tar.gz dist/*.whl
 
       - name: 🏷 Upload signed artifacts to Release
         uses: softprops/action-gh-release@v1
