--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
             python -m pip install -r requirements-dev.txt
           fi
 
-          # Всегда гарантированно ставим все нужные dev-утилиты:
+          # Устанавливаем только те инструменты, которые нужны для линтинга/тестов:
           python -m pip install \
             pre-commit \
             ruff \
@@ -52,9 +52,7 @@ jobs:
             isort \
             mypy \
             pytest \
-            coverage \
-            syft \
-            semgrep
+            coverage
 
       - name: 🔍 Run pre-commit hooks
         run: pre-commit run --all-files
@@ -102,6 +100,8 @@ jobs:
       - name: 📦 Install SBOM tools
         run: |
           python -m pip install --upgrade pip
+
+          # Устанавливаем syft и trivy
           python -m pip install syft trivy
 
       - name: 🔧 Install Grype (CLI)
@@ -188,7 +188,10 @@ jobs:
           chmod +x /usr/local/bin/cosign
 
       - name: 📦 Build Python packages
-        run: python -m pip install --upgrade pip setuptools wheel build && python -m build
+        run: |
+          python -m pip install --upgrade pip setuptools wheel build
+          python -m pip install build
+          python -m build
 
       - name: 📝 Create GitHub Release
         id: create_release
