--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,9 @@ env:
   PYTHON_VERSION: '3.13'
 
 jobs:
+  ################################################################################
   # ─── ШАГ 1: Lint → Type → Test → Coverage ──────────────────────────────────
+  ################################################################################
   lint_and_test:
     name: Lint & Test & Coverage
     runs-on: ubuntu-latest
@@ -44,7 +46,7 @@ jobs:
             python -m pip install -r requirements-dev.txt
           fi
 
-          # Устанавливаем только инструменты для линтинга и тестирования
+          # Устанавливаем базовые инструменты для линтинга и тестирования
           python -m pip install \
             pre-commit \
             ruff \
@@ -83,7 +85,9 @@ jobs:
             coverage.xml
             htmlcov/
 
-  # ─── ШАГ 2: Генерация SBOM → Grype/Trivy scan ─────────────────────────────────
+  ################################################################################
+  # ─── ШАГ 2: Генерация SBOM → Grype / Trivy scan ──────────────────────────────
+  ################################################################################
   sbom_scan:
     name: SBOM → Grype / Trivy
     needs: lint_and_test
@@ -97,19 +101,19 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: 📦 Install SBOM tools
+      - name: 📦 Install SBOM tools (Syft, Trivy, Grype)
         run: |
-          python -m pip install --upgrade pip
+          # 1) Syft: скачиваем бинарь из официального репозитория
+          curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh \
+            | sh -s -- -b /usr/local/bin
 
-          # Устанавливаем syft через PyPI
-          python -m pip install syft
+          # 2) Trivy: скачиваем бинарь из официального репозитория
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh \
+            | sh -s -- -b /usr/local/bin
 
-          # Устанавливаем Trivy через официальный скрипт
-          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
-
-      - name: 🔧 Install Grype (CLI)
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+          # 3) Grype: скачиваем бинарь из официального репозитория
+          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh \
+            | sh -s -- -b /usr/local/bin
 
       - name: ⚙️ Generate SBOM (CycloneDX JSON)
         run: syft . -o cyclonedx-json=sbom.json
@@ -128,7 +132,9 @@ jobs:
           name: sbom-json
           path: sbom.json
 
-  # ─── ШАГ 3: Semgrep Static Analysis ─────────────────────────────────────────
+  ################################################################################
+  # ─── ШАГ 3: Semgrep Static Analysis ───────────────────────────────────────────
+  ################################################################################
   semgrep_scan:
     name: Semgrep Static Analysis
     needs: sbom_scan
@@ -145,7 +151,9 @@ jobs:
         with:
           config: 'p/ci'
 
-  # ─── ШАГ 4: CodeQL Analysis ─────────────────────────────────────────────────
+  ################################################################################
+  # ─── ШАГ 4: CodeQL Analysis ───────────────────────────────────────────────────
+  ################################################################################
   codeql_analysis:
     name: CodeQL Analysis
     needs: semgrep_scan
@@ -165,7 +173,9 @@ jobs:
       - name: 🔍 Run CodeQL queries
         uses: github/codeql-action/analyze@v3
 
-  # ─── ШАГ 5: Sign & Release (только при теге v*) ─────────────────────────────────
+  ################################################################################
+  # ─── ШАГ 5: Sign & Release (только при теге v*) ────────────────────────────────
+  ################################################################################
   sign_and_release:
     name: Sign Artifacts & Publish Release
     if: startsWith(github.ref, 'refs/tags/v')
@@ -187,7 +197,8 @@ jobs:
       - name: 🔧 Install Cosign (CLI)
         run: |
           COSIGN_VERSION=v2.1.0
-          curl -sSL https://github.com/sigstore/cosign/releases/download/${COSIGN_VERSION}/cosign-${COSIGN_VERSION}-linux-amd64 -o /usr/local/bin/cosign
+          curl -sSL https://github.com/sigstore/cosign/releases/download/${COSIGN_VERSION}/cosign-${COSIGN_VERSION}-linux-amd64 \
+            -o /usr/local/bin/cosign
           chmod +x /usr/local/bin/cosign
 
       - name: 📦 Build Python packages
