ci: исключил .github из SBOM, чтобы Grype не падал на vuln в vault-action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,7 @@ env:
   PYTHON_VERSION: '3.13'
 
 jobs:
-  ################################################################################
   # ─── ШАГ 1: Lint → Type → Test → Coverage ──────────────────────────────────
-  ################################################################################
   lint_and_test:
     name: Lint & Test & Coverage
     runs-on: ubuntu-latest
@@ -38,23 +36,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: 📦 Install dev dependencies
+      - name: 📦 Install dependencies (dev)
         run: |
           python -m pip install --upgrade pip setuptools wheel
-
           if [ -f requirements-dev.txt ]; then
             python -m pip install -r requirements-dev.txt
+          else
+            python -m pip install \
+              pre-commit \
+              ruff black isort mypy pytest coverage \
+              syft semgrep cosign
           fi
-
-          # Устанавливаем базовые инструменты для линтинга и тестирования
-          python -m pip install \
-            pre-commit \
-            ruff \
-            black \
-            isort \
-            mypy \
-            pytest \
-            coverage
 
       - name: 🔍 Run pre-commit hooks
         run: pre-commit run --all-files
@@ -85,9 +77,7 @@ jobs:
             coverage.xml
             htmlcov/
 
-  ################################################################################
-  # ─── ШАГ 2: Генерация SBOM → Grype / Trivy scan ──────────────────────────────
-  ################################################################################
+  # ─── ШАГ 2: Генерация SBOM → Grype / Trivy scan ─────────────────────────────
   sbom_scan:
     name: SBOM → Grype / Trivy
     needs: lint_and_test
@@ -103,20 +93,24 @@ jobs:
 
       - name: 📦 Install SBOM tools (Syft, Trivy, Grype)
         run: |
-          # 1) Syft: скачиваем бинарь из официального репозитория
+          # 1) Syft: официальный install-скрипт
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh \
             | sh -s -- -b /usr/local/bin
 
-          # 2) Trivy: скачиваем бинарь из официального репозитория
+          # 2) Trivy: официальный install-скрипт
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh \
             | sh -s -- -b /usr/local/bin
 
-          # 3) Grype: скачиваем бинарь из официального репозитория
+          # 3) Grype: официальный install-скрипт
           curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh \
             | sh -s -- -b /usr/local/bin
 
       - name: ⚙️ Generate SBOM (CycloneDX JSON)
-        run: syft . -o cyclonedx-json=sbom.json
+        run: |
+          # Исключаем директорию .github, чтобы не попадали Actions-зависимости
+          syft . \
+            -o cyclonedx-json=sbom.json \
+            -x .github
 
       - name: 🔎 Scan SBOM with Grype
         run: grype sbom:sbom.json --fail-on medium
@@ -132,9 +126,7 @@ jobs:
           name: sbom-json
           path: sbom.json
 
-  ################################################################################
-  # ─── ШАГ 3: Semgrep Static Analysis ───────────────────────────────────────────
-  ################################################################################
+  # ─── ШАГ 3: Semgrep Static Analysis ───────────────────────────────────────
   semgrep_scan:
     name: Semgrep Static Analysis
     needs: sbom_scan
@@ -151,9 +143,7 @@ jobs:
         with:
           config: 'p/ci'
 
-  ################################################################################
-  # ─── ШАГ 4: CodeQL Analysis ───────────────────────────────────────────────────
-  ################################################################################
+  # ─── ШАГ 4: CodeQL Analysis ───────────────────────────────────────────────
   codeql_analysis:
     name: CodeQL Analysis
     needs: semgrep_scan
@@ -173,9 +163,7 @@ jobs:
       - name: 🔍 Run CodeQL queries
         uses: github/codeql-action/analyze@v3
 
-  ################################################################################
-  # ─── ШАГ 5: Sign & Release (только при теге v*) ────────────────────────────────
-  ################################################################################
+  # ─── ШАГ 5: Sign & Release (только при теге v*) ──────────────────────────
   sign_and_release:
     name: Sign Artifacts & Publish Release
     if: startsWith(github.ref, 'refs/tags/v')
@@ -194,18 +182,30 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: 🔧 Install Cosign (CLI)
-        run: |
-          COSIGN_VERSION=v2.1.0
-          curl -sSL https://github.com/sigstore/cosign/releases/download/${COSIGN_VERSION}/cosign-${COSIGN_VERSION}-linux-amd64 \
-            -o /usr/local/bin/cosign
-          chmod +x /usr/local/bin/cosign
-
-      - name: 📦 Build Python packages
+      - name: 📦 Install build tools
         run: |
           python -m pip install --upgrade pip setuptools wheel build
-          python -m pip install build
-          python -m build
+          python -m pip install cosign
+
+      - name: 🔐 (Optional) Fetch Cosign key from Vault
+        if: ${{ env.VAULT_ADDR && env.VAULT_TOKEN }}
+        uses: hashicorp/vault-action@v2
+        id: vault
+        with:
+          url: ${{ env.VAULT_ADDR }}
+          method: token
+          token: ${{ env.VAULT_TOKEN }}
+          path: secret/data/cosign
+
+      - name: 📥 Write Cosign Private Key
+        if: steps.vault.outputs['secret/data/cosign']
+        run: |
+          echo "${{ steps.vault.outputs['secret/data/cosign'] }}" \
+            | base64 --decode > cosign.key
+          chmod 600 cosign.key
+
+      - name: 📦 Build Python packages
+        run: python -m build
 
       - name: 📝 Create GitHub Release
         id: create_release
@@ -221,7 +221,8 @@ jobs:
             – 📑 Подпись артефактов через Cosign
 
       - name: 🔏 Sign artifacts with Cosign
-        run: cosign sign --key cosign.key dist/*.tar.gz dist/*.whl
+        run: |
+          cosign sign --key cosign.key dist/*.tar.gz dist/*.whl
 
       - name: 🏷 Upload signed artifacts to Release
         uses: softprops/action-gh-release@v1
